--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@giscus/react": "^2.2.6",
     "@headlessui/react": "^1.7.15",
     "@next/bundle-analyzer": "^12.1.1",
+    "@tawk.to/tawk-messenger-react": "^2.0.2",
     "@vercel/analytics": "^1.0.0",
     "algoliasearch": "^4.18.0",
     "animejs": "^3.2.1",
